# classic-radio

./: .gitignore  README.md  config.yaml  conftest.py  pyproject.toml  requirements.txt
deploy/: fmradiod.service  install-service.sh  soak.sh  sync.sh
docs/: bluetooth-output-build.md  bluetooth-spike.md  denver-radio-stations.md  gpio-buttons-build.md  hd-radio-spike.md  headless-core-build.md  pi-flash-setup.md  radio.html  roadmap.md  tft-display-build.md
fmradiod/: __init__.py  __main__.py  audio.py  config.py  events.py  metadata.py  presets.py  process.py  state.py  tuner.py  viewstate.py
fmradiod/backends/: __init__.py  analog.py  base.py  hd.py  weather.py
fmradiod/bluetooth/: __init__.py  controller.py  dbus.py
fmradiod/buttons/: __init__.py  debounce.py  input.py  source.py
fmradiod/display/: __init__.py  panel.py  render.py  renderer.py
fmradiod/web/: __init__.py  app.py
fmradiod/web/static/: index.html
openspec/changes/build-bluetooth-output/: design.md  proposal.md  tasks.md
openspec/changes/build-gpio-buttons/: proposal.md  tasks.md
openspec/changes/derisk-bluetooth-audio/: design.md  tasks.md
openspec/specs/audio-streaming/: spec.md
openspec/specs/bluetooth-output/: spec.md
tests/: test_audio.py  test_backends.py  test_bluetooth_controller.py  test_buttons_debounce.py  test_buttons_input.py  test_config.py  test_display_panel.py  test_display_render.py  test_display_renderer.py  test_events.py  test_main.py  test_metadata.py  test_presets.py  test_smoke.py  test_state.py  test_tuner.py  test_web.py
(+26 files in other folders)
